Fixes and added jumpting sprites

--- a/extensions-boilerplate/src/components/Mmo/style.css
+++ b/extensions-boilerplate/src/components/Mmo/style.css
@@ -30,8 +30,11 @@ body {
 	font-weight: normal;
 	font-size: 12px;
 	background: transparent;
-
+	position: relative;
+	width: 1920px;
+	height: 1080px;
 }
+
 
 .interface {}
 
